# pmplib-proto

./: .gitignore  CMakeLists.txt  Compile_from_scratch.sh  README.md  compile_from_scratch  main.cpp
conf/: configurations.json
config/: Version.h.in  configurations.conf  configurations.conf.in
core/: CMakeLists.txt
core/include/: Arithmetic.h  ArithmeticFunctions.hpp  Basics.h  Brackets.hpp  DefaultConfigs.hpp  DefaultFSM.hpp  FiniteStateMachine.hpp  GlobalConfig.h  IOBasic.h  IOBasic.hpp  IOFunctions.h  StructuredNotation.hpp
core/include/mpengine/: integer.h
core/include/pmp/: integer.h
core/post/: printdefaultconfigs.cpp
core/pre/: genConfigurations.cpp
core/src/: Arithmetic.cpp  Basics.cpp  GlobalConfig.cpp  IOBasic.cpp  IOFunctions.cpp  integer.cpp
core/test/: basicnumtest.cpp  compunittest.cpp  configtest.cpp  configtypetest.cpp  functiontest.cpp  integertest.cpp  machinetest.cpp  numiotest.cpp  stntest.cpp
include/: BasicNum.h  CompGraphNodes.h  CompReign.h  Real.h  ThreadPool.h
include/Core/: ArithmeticFunctions.hpp  ArithmeticGraphNode.h  BaseNum.h  Prememory.h
include/Serialization/: BaseNumIO.h
include/TaskHandler/: Log.h  ThreadPool.h
others/: funsignature.md
putils/: CMakeLists.txt
putils/include/: AlignedMem.h  DirectMapper.h  GeneralException.h  LockFreeQueue.hpp  Log.h  MemoryAllocator.h  Putils.h  RuntimeLog.h  TaskHandler.h  task.hpp
putils/src/: AlignedMem.cpp  DirectMapper.cpp  GeneralException.cpp  LockFreeQueue.hpp  Log.cpp  MemoryAllocator.cpp  Putils.cpp  RuntimeLog.cpp  TaskHandler.cpp
putils/test/: blocktest.cpp  exceptiontest.cpp  lockfreelog.cpp  lockfreequetest.cpp  logtest.cpp  mappertest.cpp  memorypooltest.cpp  taskhandlertest.cpp
py/: requirements.txt
py/graphv/: graphv.in  graphv_common.py
py/graphv/utils/: __init__.py  graphv_context_dag.py  graphv_dag.py  graphv_factory.py
src/: BasicNum.cpp  CompGraphNodes.cpp  CompReign.cpp  Real.cpp  ThreadPool.cpp
src/Core/: ArithmeticGraphNode.cpp  BaseNum.cpp  Prememory.cpp
src/Serialization/: BaseNumIO.cpp
src/TaskHandler/: Log.cpp  ThreadPool.cpp
test/Core/: arithmeticfunctiontest.cpp  arithmeticnodes.cpp  multnodetest.cpp  prememory.cpp
test/Serialization/: basenumio.cpp
test/TaskHandler/: logtest.cpp  threadpooltest.cpp
test/others/: testavx.cpp
trash/: BasicNum.cpp  BasicNum.h  CMakeLists.txt  CompGraphNodes.cpp  CompGraphNodes.h  CompReign.h  Real.cpp  Real.h  ThreadPool.h
